# hbpf

./: CHANGELOG.md  LICENSE  README.md  TODO  hbpf.cabal
app/: Main.hs  Trace_execve.hs
docs/: bpf-arch.md  bpf-helpers.md  dev-notes.md  instruction-set.md  program.md  why.md
src/: Encode.hs  GenericInstructions.hs  Helpers.hs  Instructions.hs  Opcode.hs  Program.hs  Types.hs
tests/: Main.hs
