cabal-version:      3.0

name:               hbpf
version:            0.1.0.0
synopsis:           Haskell eBPF DSL — write eBPF programs in Haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kinan Al-Falakh
maintainer:         kinanalfalakh@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Types, Opcode, GenericInstructions, Instructions, Encode, Helpers, Program
    hs-source-dirs:   src
    build-depends:    base ^>=4.18.3.0, bytestring, containers, transformers
    default-language: Haskell2010

executable hbpf
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.18.3.0, bytestring, hbpf
    default-language: Haskell2010

test-suite hbpf-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    build-depends:    base ^>=4.18.3.0, bytestring, tasty, tasty-hunit, hbpf
    default-language: Haskell2010
